# pycomponents

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
example/: README.md  pycomponents-5726.json  pycomponents-75251.json  requirements.txt
pycomponents/: __init__.py  bom.py  cli.py  components.py  constants.py  exceptions.py  output.py  processes.py  rating.py  service.py  settings.py  site_packages.py  utils.py  vulnerability.py
pycomponents/cve_search/: __init__.py  schemas.py
pycomponents/osv/: __init__.py  schemas.py
tests/: test_bom.py  test_cli.py  test_osv.py  test_rating.py  test_site_packages.py  test_utils.py  test_vulnerability.py
tests/fixtures/vcr_cassettes/: jinja2_2.4.1_vulnerability.yaml  osv_400.yaml  osv_jinja2_2.4.1.yaml  osv_query_no_vulns.yaml
vagrant/: Vagrantfile
