[tool.poetry]
name = "py-sbom-components"
version = "0.2.0"
description = "An experimental tool to generate CycloneDX BOM from running Python processes"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
packages = [
    { include = "pycomponents" }
]
homepage = "https://github.com/ninoseki/pycomponents"
repository = "https://github.com/ninoseki/pycomponents"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
arrow = "^1.2.2"
cachetools = "^5.2.0"
cyclonedx-python-lib = "^2.7.1"
environs = "^9.5.0"
httpx = "^0.23.0"
loguru = "^0.6.0"
psutil = "^5.9.1"
pydantic = "^1.9.2"
sh = "^1.14.3"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.7.0"
black = "^22.6.0"
coveralls = "^3.3.1"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.5"
pyupgrade = "^2.37.3"
vcrpy = "^4.2.0"
types-cachetools = "^5.2.1"

[tool.poetry.scripts]
pycomponents = "pycomponents.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
